--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.0.1",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
