--- a/.editorconfig
+++ b/.editorconfig
@@ -3,11 +3,22 @@ root = true
 
 [*]
 charset = utf-8
+end_of_line = lf
+
 indent_style = tab
-indent_size = 4
+tab_width = 4
+
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.yml]
+indent_style = spaces
+indent_size = 2
+
+[*.json]
+indent_style = spaces
+indent_size = 2
