--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
+    "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,43 +12,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
-    "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^3.0.1",
-    "roboto-fontface": "^0.10.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "7.0",
+    "@angular/common": "7.0",
+    "@angular/compiler": "7.0",
+    "@angular/core": "7.0",
+    "@angular/forms": "7.0",
+    "@angular/http": "7.0",
+    "@angular/platform-browser": "7.0",
+    "@angular/platform-browser-dynamic": "7.0",
+    "@angular/router": "7.0",
+    "bootstrap": "4.1",
+    "core-js": "2.5",
+    "font-awesome": "4.7",
+    "ngx-bootstrap": "3.0",
+    "roboto-fontface": "0.10",
+    "rxjs": "6.3",
+    "zone.js": "0.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.18.4",
-    "protractor": "~5.4.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "@angular-devkit/build-angular": "0.10",
+    "@angular/cli": "7.0",
+    "@angular/compiler-cli": "7.0",
+    "@angular/language-service": "7.0",
+    "@types/jasmine": "2.8",
+    "@types/jasminewd2": "2.0",
+    "@types/node": "8.9",
+    "codelyzer": "4.5",
+    "jasmine-core": "2.99",
+    "jasmine-spec-reporter": "4.2",
+    "karma": "3.0",
+    "karma-chrome-launcher": "2.2",
+    "karma-coverage-istanbul-reporter": "2.0",
+    "karma-jasmine": "1.1",
+    "karma-jasmine-html-reporter": "0.2",
+    "nodemon": "1.18",
+    "protractor": "5.4",
+    "ts-node": "7.0",
+    "tslint": "5.11",
+    "typescript": "3.1"
   }
 }
