moved css to src/styles

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [ "src/assets/styles" ]
+              "includePaths": [ "src/styles" ]
             },
             "scripts": []
           },
@@ -84,7 +84,7 @@
               "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [ "src/assets/styles" ]
+              "includePaths": [ "src/styles" ]
             },
             "scripts": [],
             "assets": [
