--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 dist: trusty
-sudo: false
+# Remove when https://github.com/travis-ci/travis-ci/issues/9024#issuecomment-356282802 is resolved
+sudo: required
 
 language: node_js
 node_js:
@@ -11,6 +12,11 @@ addons:
       - google-chrome
     packages:
       - google-chrome-stable
+
+# Remove when https://github.com/travis-ci/travis-ci/issues/9024#issuecomment-356282802 is resolved
+before_script:
+    - "sudo chown root /opt/google/chrome/chrome-sandbox"
+    - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 
 cache:
   directories:
