Adding moment dependency. Adding ago-date pipe.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "4.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
+    "moment": "2.22",
     "ngx-bootstrap": "3.0",
     "roboto-fontface": "0.10",
     "rxjs": "6.3",
