--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --prod --stats-json",
     "test": "ng test",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "bundle-report": "npm run build:prod && webpack-bundle-analyzer dist/ngx-starter/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,7 @@
     "protractor": "5.4",
     "ts-node": "7.0",
     "tslint": "5.11",
-    "typescript": "3.1"
+    "typescript": "3.1",
+    "webpack-bundle-analyzer": "3.0"
   }
 }
