--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
     "build": "ng build",
-    "build:prod": "ng build --prod --stats-json",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint",
