--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,7 @@ install:
 script:
   - npm run test:ci
   - npm run e2e
+
+after_success:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < coverage/lcov.info
