--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-report": "npm run build:prod && webpack-bundle-analyzer dist/ngx-starter/stats.json"
+    "bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json"
   },
   "private": true,
   "dependencies": {
