Updating name of bundle-report task and adding description of all NPM scripts to README

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
     "build": "ng build",
     "build:prod": "ng build --prod",
+    "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
     "test": "ng test",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
