Some minor lint fixes

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
-    "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build": "npm run lint && ng build",
+    "build:prod": "npm run lint && ng build --prod",
     "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
     "test": "ng test",
     "test:ci": "ng test --watch=false --code-coverage",
-    "lint": "ng lint",
+    "lint": "ng lint && npm run lint:styles",
+    "lint:styles": "stylelint './src/**/*.scss'",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -52,6 +53,9 @@
     "karma-junit-reporter": "1.2",
     "nodemon": "1.18",
     "protractor": "5.4",
+    "stylelint": "9",
+    "stylelint-config-recommended-scss": "3",
+    "stylelint-scss": "3",
     "ts-node": "7.0",
     "tslint": "5.11",
     "typescript": "3.1",
