--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "7.2",
     "@angular/platform-browser-dynamic": "7.2",
     "@angular/router": "7.2",
+    "@ng-select/ng-select": "^2.13.3",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
