--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "7.2",
     "@angular/platform-browser-dynamic": "7.2",
     "@angular/router": "7.2",
-    "@ng-select/ng-select": "^2.13.3",
+    "@ng-select/ng-select": "2.13.3",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
@@ -35,8 +35,8 @@
     "zone.js": "0.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13",
-    "@angular/cli": "7.2",
+    "@angular-devkit/build-angular": "0.13.9",
+    "@angular/cli": "7.3.9",
     "@angular/compiler-cli": "7.2",
     "@angular/language-service": "7.2",
     "@types/jasmine": "2.8",
@@ -45,7 +45,7 @@
     "codelyzer": "4.5",
     "jasmine-core": "2.99",
     "jasmine-spec-reporter": "4.2",
-    "karma": "4.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "2.2",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "1.1",
@@ -59,6 +59,6 @@
     "ts-node": "7.0",
     "tslint": "5.11",
     "typescript": "3.1",
-    "webpack-bundle-analyzer": "3.0"
+    "webpack-bundle-analyzer": "3.3.2"
   }
 }
