--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,11 @@
 dist: trusty
-# Remove when https://github.com/travis-ci/travis-ci/issues/9024#issuecomment-356282802 is resolved
-sudo: required
 
 language: node_js
 node_js:
   - "10"
 
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-
-# Remove when https://github.com/travis-ci/travis-ci/issues/9024#issuecomment-356282802 is resolved
-before_script:
-    - "sudo chown root /opt/google/chrome/chrome-sandbox"
-    - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
+  chrome: stable
 
 cache:
   directories:
