--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 script:
   - npm run build:prod
   - npm run test:ci
-  - npm run e2e
+#  - npm run e2e
 
 after_success:
   - npm install -g codeclimate-test-reporter
