Adding example for integrating @asymmetrik/ngx-sentio. Exhibits bug with running in production mode

--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
+    "d3": "5",
+    "@types/d3": "5",
     "font-awesome": "4.7",
     "moment": "2.22",
     "ngx-bootstrap": "4.3.0",
     "roboto-fontface": "0.10",
     "rxjs": "6.5.2",
+    "@asymmetrik/sentio": "5",
+    "@asymmetrik/ngx-sentio": "6",
     "zone.js": "~0.9.1",
     "socket.io-client": "^2.2.0"
   },
