build: add option to run in dev mode with es5 vs es2015
With the upgrade to Angular 8, angular will now generate 2 different builds, modern (es2015) and legacy (es5).  However, only the modern bundle is generated when using `ng serve`.  Add additional option to run dev build with legacy bundle vs modern.

--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,9 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "es5": {
+              "tsConfig": "./src/tsconfig-es5.app.json"
             }
           }
         },
@@ -68,6 +71,9 @@
           "configurations": {
             "production": {
               "browserTarget": "ngx-starter:build:production"
+            },
+            "es5": {
+              "browserTarget": "ngx-starter:build:es5"
             }
           }
         },
