--- a/package.json
+++ b/package.json
@@ -15,55 +15,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.2",
-    "@angular/common": "8.0.2",
-    "@angular/compiler": "8.0.2",
-    "@angular/core": "8.0.2",
-    "@angular/forms": "8.0.2",
-    "@angular/platform-browser": "8.0.2",
-    "@angular/platform-browser-dynamic": "8.0.2",
-    "@angular/router": "8.0.2",
-    "@ng-select/ng-select": "3.0.7",
+    "@angular/animations": "8.2",
+    "@angular/common": "8.2",
+    "@angular/compiler": "8.2",
+    "@angular/core": "8.2",
+    "@angular/forms": "8.2",
+    "@angular/platform-browser": "8.2",
+    "@angular/platform-browser-dynamic": "8.2",
+    "@angular/router": "8.2",
+    "@ng-select/ng-select": "3.6",
     "@types/socket.io-client": "^1.4.32",
-    "bootstrap": "4.3.1",
-    "core-js": "2.5",
+    "bootstrap": "4.3",
     "d3": "5",
     "@types/d3": "5",
     "font-awesome": "4.7",
-    "moment": "2.22",
-    "ngx-bootstrap": "4.3.0",
+    "moment": "2.24",
+    "ngx-bootstrap": "4.3",
     "roboto-fontface": "0.10",
-    "rxjs": "6.5.2",
+    "rxjs": "6.5",
+    "tslib": "1.10",
     "@asymmetrik/sentio": "5",
     "@asymmetrik/ngx-sentio": "6",
     "zone.js": "~0.9.1",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "8.0.2",
-    "@angular/language-service": "8.0.2",
-    "@types/jasmine": "2.8",
+    "@angular-devkit/build-angular": "0.803",
+    "@angular/cli": "8.3",
+    "@angular/compiler-cli": "8.2",
+    "@angular/language-service": "8.2",
+    "@types/jasmine": "3.5",
     "@types/jasminewd2": "2.0",
     "@types/node": "8.9",
     "codelyzer": "^5.1.1",
-    "jasmine-core": "2.99",
+    "jasmine-core": "3.5",
     "jasmine-spec-reporter": "4.2",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "2.2",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "1.1",
-    "karma-jasmine-html-reporter": "0.2",
+    "karma-coverage-istanbul-reporter": "2.0",
+    "karma-jasmine": "2.0",
+    "karma-jasmine-html-reporter": "1.4",
     "karma-junit-reporter": "1.2",
     "nodemon": "1.18.6",
     "protractor": "5.4",
-    "stylelint": "9",
-    "stylelint-config-recommended-scss": "3",
+    "stylelint": "12",
+    "stylelint-config-recommended-scss": "4",
     "stylelint-scss": "3",
     "ts-node": "7.0",
-    "tslint": "5.11",
-    "typescript": "3.4.5",
-    "webpack-bundle-analyzer": "3.3.2"
+    "tslint": "5.20",
+    "typescript": "3.5",
+    "webpack-bundle-analyzer": "3.6"
   }
 }
