--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "npm run lint && ng build --prod",
     "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es5.json",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --code-coverage",
+    "test:ci": "ng test --karma-config karma.ci.conf.js --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
     "e2e": "ng e2e"
   },
