--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "ng test",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
+    "lint:fix": "ng lint --fix && stylelint './src/**/*.scss' --fix",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -54,12 +55,16 @@
     "karma-jasmine-html-reporter": "0.2",
     "karma-junit-reporter": "1.2",
     "nodemon": "1.18.6",
+    "prettier": "^1.19.1",
     "protractor": "5.4",
-    "stylelint": "9",
-    "stylelint-config-recommended-scss": "3",
-    "stylelint-scss": "3",
+    "stylelint": "^13.0.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.14.2",
     "ts-node": "7.0",
     "tslint": "5.11",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.1.0",
     "typescript": "3.5.3",
     "webpack-bundle-analyzer": "3.3.2"
   }
