--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.14.2",
     "ts-node": "7.0",
     "tslint": "5.11",
