--- a/package.json
+++ b/package.json
@@ -17,35 +17,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@ng-select/ng-select": "3.0.7",
+    "@angular/animations": "9.0.7",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
+    "@angular/core": "9.0.7",
+    "@angular/forms": "9.0.7",
+    "@angular/platform-browser": "9.0.7",
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/router": "9.0.7",
+    "@ng-select/ng-select": "3.7.3",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
     "moment": "2.22",
-    "ngx-bootstrap": "4.3.0",
+    "ngx-bootstrap": "5.6.0",
     "roboto-fontface": "0.10",
     "rxjs": "6.5.4",
-    "zone.js": "~0.9.1",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "8.3.25",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "9.0.7",
+    "@angular/compiler-cli": "9.0.7",
+    "@angular/language-service": "9.0.7",
     "@types/jasmine": "2.8",
     "@types/jasminewd2": "2.0",
-    "@types/node": "8.9",
-    "codelyzer": "^5.1.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.1",
     "jasmine-core": "2.99",
     "jasmine-spec-reporter": "4.2",
@@ -68,7 +69,7 @@
     "tslint": "5.11",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "typescript": "3.5.3",
+    "typescript": "3.7.5",
     "webpack-bundle-analyzer": "3.3.2"
   },
   "husky": {
