--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,9 @@ tab_width = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.ts]
+quote_type = single
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
