enable strictTemplates compiler option; fixed errors found

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": false,
+    "strictTemplates": true,
     "strictInjectionParameters": true
   }
 }
