--- a/package.json
+++ b/package.json
@@ -17,58 +17,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@ng-select/ng-select": "3.0.7",
+    "@angular/animations": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/forms": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
+    "@angular/router": "9.1.0",
+    "@ng-select/ng-select": "3.7.3",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
     "moment": "2.22",
-    "ngx-bootstrap": "4.3.0",
+    "ngx-bootstrap": "5.6.0",
     "roboto-fontface": "0.10",
     "rxjs": "6.5.4",
-    "zone.js": "~0.9.1",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "8.3.21",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
-    "@types/jasmine": "2.8",
-    "@types/jasminewd2": "2.0",
-    "@types/node": "8.9",
-    "codelyzer": "^5.1.1",
+    "@angular-devkit/build-angular": "0.901.0",
+    "@angular/cli": "9.1.0",
+    "@angular/compiler-cli": "9.1.0",
+    "@angular/language-service": "9.1.0",
+    "@types/jasmine": "3.5.0",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.1",
-    "jasmine-core": "2.99",
-    "jasmine-spec-reporter": "4.2",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "2.2",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "1.1",
-    "karma-jasmine-html-reporter": "0.2",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "2.1.0",
+    "karma-jasmine": "3.0.1",
+    "karma-jasmine-html-reporter": "1.4.2",
     "karma-junit-reporter": "1.2",
     "lint-staged": "^10.0.7",
     "nodemon": "1.18.6",
     "prettier": "^1.19.1",
-    "protractor": "5.4",
+    "protractor": "5.4.3",
     "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.14.2",
-    "ts-node": "7.0",
-    "tslint": "5.11",
+    "ts-node": "8.3.0",
+    "tslint": "6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "typescript": "3.5.3",
+    "typescript": "3.8.3",
     "webpack-bundle-analyzer": "3.3.2"
   },
   "husky": {
