deps: Dependency hell.

--- a/package.json
+++ b/package.json
@@ -22,21 +22,24 @@
     "@angular/compiler": "9.1.0",
     "@angular/core": "9.1.0",
     "@angular/forms": "9.1.0",
+    "@angular/localize": "9.1.0",
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
-    "@ng-select/ng-select": "3.7.3",
+    "@ng-select/ng-select": "^4.0",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
+    "jquery": "^3.4.1",
     "moment": "2.22",
     "ngx-bootstrap": "5.6.0",
+    "popper.js": "^1.16.1",
     "roboto-fontface": "0.10",
     "rxjs": "6.5.4",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "socket.io-client": "^2.2.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.0",
@@ -46,7 +49,7 @@
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "husky": "^4.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -68,7 +71,7 @@
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.1.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "3.8.3",
     "webpack-bundle-analyzer": "3.3.2"
   },
