--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^9.1.0",
     "@angular-devkit/build-angular": "0.901.0",
     "@angular/cli": "9.1.0",
     "@angular/compiler-cli": "9.1.0",
