--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
     "@ng-select/ng-select": "^4.0",
+    "@ngneat/until-destroy": "^7.3.2",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
