fix: enable typescript strict type checking options
Enables `noImplicitAny`, `noImplicitThis`, `strictBindCallApply`, and `strictFunctionTypes` typescript compiler options.

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "@angular/router": "9.1.0",
     "@ng-select/ng-select": "^4.0",
     "@ngneat/until-destroy": "^7.3.2",
-    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.19",
     "moment": "2.22",
     "ngx-bootstrap": "5.6.0",
     "popper.js": "^1.16.1",
@@ -51,7 +51,9 @@
     "@angular/language-service": "9.1.0",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/lodash": "^4.14.158",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/webpack": "^4.41.21",
     "codelyzer": "^5.2.2",
     "husky": "^4.2.1",
     "jasmine-core": "3.5.0",
