--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.19",
-    "moment": "2.22",
+    "jquery": "3.5",
+    "lodash": "4.17",
+    "moment": "2.29",
     "ngx-bootstrap": "5.6.0",
-    "popper.js": "^1.16.1",
+    "popper.js": "1.16",
     "roboto-fontface": "0.10",
-    "rxjs": "6.5.4",
+    "rxjs": "6.6",
     "socket.io-client": "^2.2.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "0.11"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.1.0",
@@ -49,34 +49,34 @@
     "@angular/cli": "9.1.0",
     "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "9.1.0",
-    "@types/jasmine": "3.5.0",
-    "@types/jasminewd2": "2.0.3",
-    "@types/lodash": "^4.14.158",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/webpack": "^4.41.21",
+    "@types/jasmine": "3.6",
+    "@types/jasminewd2": "2.0",
+    "@types/lodash": "4.14",
+    "@types/socket.io-client": "1.4",
+    "@types/webpack": "4.41",
     "codelyzer": "^5.2.2",
-    "husky": "^4.2.1",
-    "jasmine-core": "3.5.0",
+    "husky": "4.3",
+    "jasmine-core": "3.6",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "^4.4.1",
-    "karma-chrome-launcher": "3.1.0",
+    "karma-chrome-launcher": "3.1",
     "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "3.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
+    "karma-jasmine-html-reporter": "1.5",
     "karma-junit-reporter": "1.2",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "10.5",
     "nodemon": "1.18.6",
     "prettier": "^1.19.1",
     "protractor": "5.4.3",
-    "stylelint": "^13.0.0",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.14.2",
+    "stylelint": "13.8",
+    "stylelint-config-prettier": "8.0",
+    "stylelint-config-recommended-scss": "4.2",
+    "stylelint-prettier": "1.1",
+    "stylelint-scss": "3.18",
     "ts-node": "8.3.0",
-    "tslint": "6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
+    "tslint": "6.1",
+    "tslint-config-prettier": "1.18",
+    "tslint-plugin-prettier": "2.3",
     "typescript": "3.8.3",
     "webpack-bundle-analyzer": "3.3.2"
   },
