style: Prettier formatting for html
Applies prettier formatting to html files and sets up commit hook to autoformat before commit.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "lint-staged": {
     "*.{scss, css}": "stylelint --fix",
-    "*.ts": "prettier --write"
+    "*.ts": "prettier --write",
+    "*.html": "prettier --write"
   }
 }
