example feedback-modal and use cdkTrapFocus

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.0",
+    "@angular/cdk": "^11.2.7",
     "@angular/common": "9.1.0",
     "@angular/compiler": "9.1.0",
     "@angular/core": "9.1.0",
