--- a/package.json
+++ b/package.json
@@ -18,67 +18,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.0",
-    "@angular/cdk": "^11.2.7",
-    "@angular/common": "9.1.0",
-    "@angular/compiler": "9.1.0",
-    "@angular/core": "9.1.0",
-    "@angular/forms": "9.1.0",
-    "@angular/localize": "9.1.0",
-    "@angular/platform-browser": "9.1.0",
-    "@angular/platform-browser-dynamic": "9.1.0",
-    "@angular/router": "9.1.0",
-    "@ng-select/ng-select": "^4.0",
-    "@ngneat/until-destroy": "^7.3.2",
+    "@angular/animations": "10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "10.2.5",
+    "@angular/compiler": "10.2.5",
+    "@angular/core": "10.2.5",
+    "@angular/forms": "10.2.5",
+    "@angular/localize": "10.2.5",
+    "@angular/platform-browser": "10.2.5",
+    "@angular/platform-browser-dynamic": "10.2.5",
+    "@angular/router": "10.2.5",
+    "@ng-select/ng-select": "^5.1.0",
+    "@ngneat/until-destroy": "^8.1.1",
     "bootstrap": "4.3.1",
-    "core-js": "2.5",
     "font-awesome": "4.7",
     "jquery": "3.5",
     "lodash": "4.17",
     "moment": "2.29",
-    "ngx-bootstrap": "5.6.0",
+    "ngx-bootstrap": "6.2.0",
     "popper.js": "1.16",
     "roboto-fontface": "0.10",
     "rxjs": "6.6",
     "socket.io-client": "^2.2.0",
-    "tslib": "^1.10.0",
-    "zone.js": "0.11"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^9.1.0",
-    "@angular-devkit/build-angular": "0.901.0",
-    "@angular/cli": "9.1.0",
-    "@angular/compiler-cli": "9.1.0",
-    "@angular/language-service": "9.1.0",
-    "@types/jasmine": "3.6",
-    "@types/jasminewd2": "2.0",
+    "@angular-builders/custom-webpack": "^10.0.1",
+    "@angular-devkit/build-angular": "0.1002.3",
+    "@angular/cli": "10.2.3",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "10.2.5",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14",
     "@types/socket.io-client": "1.4",
     "@types/webpack": "4.41",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "husky": "4.3",
-    "jasmine-core": "3.6",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "3.1",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "3.0.1",
-    "karma-jasmine-html-reporter": "1.5",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "1.2",
     "lint-staged": "10.5",
-    "nodemon": "1.18.6",
     "prettier": "^1.19.1",
-    "protractor": "5.4.3",
+    "protractor": "~7.0.0",
     "stylelint": "13.8",
     "stylelint-config-prettier": "8.0",
     "stylelint-config-recommended-scss": "4.2",
     "stylelint-prettier": "1.1",
     "stylelint-scss": "3.18",
     "ts-node": "8.3.0",
-    "tslint": "6.1",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18",
     "tslint-plugin-prettier": "2.3",
-    "typescript": "3.8.3",
+    "typescript": "4.0.8",
     "webpack-bundle-analyzer": "3.3.2"
   },
   "husky": {
