Update utc-date-utils service

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@angular/router": "9.1.0",
     "@ng-select/ng-select": "^4.0",
     "@ngneat/until-destroy": "^7.3.2",
+    "@types/luxon": "^1.27.1",
     "bootstrap": "4.3.1",
     "core-js": "2.5",
     "font-awesome": "4.7",
     "jquery": "3.5",
     "lodash": "4.17",
+    "luxon": "^2.0.1",
     "moment": "2.29",
     "ngx-bootstrap": "5.6.0",
     "popper.js": "1.16",
