refactor: tsc strictNullChecks complience
Additional refactors to be compliant with enabling `strictNullCheck` in tsconfig.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "noImplicitThis": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true
   },
