--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,8 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "strictNullChecks": false
   },
   "files": [
     "src/test.ts",
