--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.5",
+    "@angular/animations": "~11.2.14",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "10.2.5",
-    "@angular/compiler": "10.2.5",
-    "@angular/core": "10.2.5",
-    "@angular/forms": "10.2.5",
-    "@angular/localize": "10.2.5",
-    "@angular/platform-browser": "10.2.5",
-    "@angular/platform-browser-dynamic": "10.2.5",
-    "@angular/router": "10.2.5",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/forms": "~11.2.14",
+    "@angular/localize": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "@ng-select/ng-select": "^5.1.0",
     "@ngneat/until-destroy": "^8.1.1",
     "bootstrap": "4.3.1",
@@ -39,17 +39,17 @@
     "ngx-bootstrap": "6.2.0",
     "popper.js": "1.16",
     "roboto-fontface": "0.10",
-    "rxjs": "6.6",
+    "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "0.1002.3",
-    "@angular/cli": "10.2.3",
-    "@angular/compiler-cli": "10.2.5",
-    "@angular/language-service": "10.2.5",
+    "@angular-devkit/build-angular": "0.1102.15",
+    "@angular/cli": "~11.2.15",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14",
@@ -60,7 +60,7 @@
     "husky": "4.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -74,11 +74,11 @@
     "stylelint-config-recommended-scss": "4.2",
     "stylelint-prettier": "1.1",
     "stylelint-scss": "3.18",
-    "ts-node": "8.3.0",
+    "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18",
     "tslint-plugin-prettier": "2.3",
-    "typescript": "4.0.8",
+    "typescript": "~4.1.5",
     "webpack-bundle-analyzer": "3.3.2"
   },
   "husky": {
