build: Update dependencies for compatibility with Angular 11

--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
-    "@ng-select/ng-select": "^5.1.0",
-    "@ngneat/until-destroy": "^8.1.1",
+    "@ng-select/ng-select": "~6.1.0",
+    "@ngneat/until-destroy": "~8.1.4",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7",
     "jquery": "3.5",
-    "lodash": "4.17",
-    "luxon": "^2.0.1",
+    "lodash": "~4.17.21",
+    "luxon": "~2.2.0",
     "moment": "2.29",
-    "ngx-bootstrap": "6.2.0",
+    "ngx-bootstrap": "~7.1.2",
     "popper.js": "1.16",
     "roboto-fontface": "0.10",
     "rxjs": "~6.6.0",
