--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "jquery": "3.5",
     "lodash": "~4.17.21",
     "luxon": "~2.2.0",
-    "moment": "2.29",
     "ngx-bootstrap": "~7.1.2",
     "popper.js": "1.16",
     "roboto-fontface": "0.10",
@@ -45,8 +44,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "0.1102.15",
+    "@angular-devkit/build-angular": "~0.1102.15",
     "@angular/cli": "~11.2.15",
     "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.14",
