--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.14",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
     "@types/socket.io-client": "1.4",
@@ -58,11 +57,11 @@
     "husky": "4.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.9",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "~1.5.0",
     "karma-junit-reporter": "1.2",
     "lint-staged": "10.5",
     "prettier": "^1.19.1",
