build: Update @angular/cli nd @angular/core to 12

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "start:es5": "ng serve --proxy-config proxy.conf.json --configuration es5",
-    "start:prod": "ng serve --proxy-config proxy.conf.json --prod",
+    "start:prod": "ng serve --proxy-config proxy.conf.json --configuration production",
     "build": "npm run lint && ng build",
-    "build:prod": "npm run lint && ng build --prod",
+    "build:prod": "npm run lint && ng build --configuration production",
     "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es2015.json",
-    "build:bundle-report:prod": "ng build --prod --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es2015.json",
+    "build:bundle-report:prod": "ng build --configuration production --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es2015.json",
     "test": "ng test --code-coverage",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
@@ -18,16 +18,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
+    "@angular/animations": "~12.2.14",
     "@angular/cdk": "~11.2.13",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/localize": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/common": "~12.2.14",
+    "@angular/compiler": "~12.2.14",
+    "@angular/core": "~12.2.14",
+    "@angular/forms": "~12.2.14",
+    "@angular/localize": "~12.2.14",
+    "@angular/platform-browser": "~12.2.14",
+    "@angular/platform-browser-dynamic": "~12.2.14",
+    "@angular/router": "~12.2.14",
     "@ng-select/ng-select": "~6.1.0",
     "@ngneat/until-destroy": "~8.1.4",
     "bootstrap": "4.3.1",
@@ -41,13 +41,13 @@
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.15",
-    "@angular/cli": "~11.2.15",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "~12.2.14",
+    "@angular/compiler-cli": "~12.2.14",
+    "@angular/language-service": "~12.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
@@ -57,7 +57,7 @@
     "husky": "4.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -75,7 +75,7 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "1.18",
     "tslint-plugin-prettier": "2.3",
-    "typescript": "~4.1.5",
+    "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "3.3.2"
   },
   "husky": {
