--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "roboto-fontface": "0.10",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -47,20 +47,20 @@
     "@angular/cli": "~12.2.14",
     "@angular/compiler-cli": "~12.2.14",
     "@angular/language-service": "~12.2.14",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~3.8.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
+    "@types/node": "^12.11.1",
     "@types/socket.io-client": "1.4",
     "@types/webpack": "4.41",
     "codelyzer": "^6.0.0",
     "husky": "4.3",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
     "karma-junit-reporter": "1.2",
     "lint-staged": "10.5",
     "prettier": "^1.19.1",
