--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.1",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
@@ -53,8 +58,13 @@
     "@types/node": "^12.11.1",
     "@types/socket.io-client": "1.4",
     "@types/webpack": "4.41",
-    "codelyzer": "^6.0.0",
-    "husky": "4.3",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "~7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
@@ -62,18 +72,15 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "karma-junit-reporter": "1.2",
-    "lint-staged": "10.5",
-    "prettier": "^1.19.1",
+    "lint-staged": "~12.1.2",
+    "prettier": "~2.5.1",
     "protractor": "~7.0.0",
     "stylelint": "13.8",
-    "stylelint-config-prettier": "8.0",
+    "stylelint-config-prettier": "~9.0.3",
     "stylelint-config-recommended-scss": "4.2",
     "stylelint-prettier": "1.1",
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "1.18",
-    "tslint-plugin-prettier": "2.3",
     "typescript": "~4.5.4",
     "webpack-bundle-analyzer": "3.3.2"
   },
@@ -84,7 +91,7 @@
   },
   "lint-staged": {
     "*.{scss, css}": "stylelint --fix",
-    "*.ts": "prettier --write",
-    "*.html": "prettier --write"
+    "*.ts": "eslint --fix",
+    "*.html": "eslint --fix"
   }
 }
