--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ngx-bootstrap": "~7.1.2",
     "popper.js": "1.16",
     "roboto-fontface": "0.10",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.4.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
