--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "ng test --code-coverage",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
-    "lint:fix": "ng lint --fix && stylelint './src/**/*.scss' --fix"
+    "lint:fix": "ng lint --fix && stylelint './src/**/*.scss' --fix",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +32,7 @@
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7",
+    "husky": "^7.0.4",
     "jquery": "3.5",
     "lodash": "~4.17.21",
     "luxon": "~2.2.0",
@@ -64,7 +66,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "~7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
@@ -82,12 +83,8 @@
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
     "typescript": "~4.5.4",
-    "webpack-bundle-analyzer": "3.3.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "webpack-bundle-analyzer": "3.3.2",
+    "husky": "^7.0.0"
   },
   "lint-staged": {
     "*.{scss, css}": "stylelint --fix",
