--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
+    "eslint-plugin-rxjs": "^5.0.1",
+    "husky": "^7.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
@@ -83,8 +84,7 @@
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
     "typescript": "~4.5.4",
-    "webpack-bundle-analyzer": "3.3.2",
-    "husky": "^7.0.0"
+    "webpack-bundle-analyzer": "3.3.2"
   },
   "lint-staged": {
     "*.{scss, css}": "stylelint --fix",
