build: update to angular 14.2

--- a/angular.json
+++ b/angular.json
@@ -124,9 +124,10 @@
       }
     }
   },
-  "defaultProject": "ngx-starter",
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
