--- a/package.json
+++ b/package.json
@@ -18,69 +18,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/localize": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/animations": "^14.2.1",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/forms": "^14.2.1",
+    "@angular/localize": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
     "@ng-select/ng-select": "~8.1.1",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
     "font-awesome": "4.7",
     "lodash": "~4.17.21",
-    "luxon": "~2.2.0",
+    "luxon": "~3.0.0",
     "ngx-bootstrap": "~8.0.0",
     "roboto-fontface": "0.10",
-    "rxjs": "^7.4.0",
+    "rxjs": "~7.5.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.4",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.1.1",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "^14.2.2",
+    "@angular-eslint/builder": "14.0.4",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/schematics": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "~14.2.2",
+    "@angular/compiler-cli": "^14.2.1",
+    "@angular/language-service": "^14.2.1",
+    "@types/jasmine": "~4.0.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
     "@types/node": "^12.11.1",
     "@types/socket.io-client": "1.4",
     "@types/webpack": "4.41",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-rxjs": "^5.0.1",
-    "husky": "^7.0.0",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.16",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-rxjs": "^5.0.2",
+    "husky": "^8.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "karma-junit-reporter": "1.2",
-    "lint-staged": "~12.1.2",
-    "prettier": "~2.5.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-junit-reporter": "~2.0.0",
+    "lint-staged": "~13.0.0",
+    "prettier": "~2.7.1",
     "stylelint": "13.8",
     "stylelint-config-prettier": "~9.0.3",
     "stylelint-config-recommended-scss": "4.2",
     "stylelint-prettier": "1.1",
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
-    "typescript": "~4.5.4",
+    "typescript": "~4.8.3",
     "webpack-bundle-analyzer": "4.5.0"
   },
   "lint-staged": {
